[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.2"
futures = "0.3"
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = "0.4"